k8s/services/cloudserver/app/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudserver
  annotations:
    secret.reloader.stakater.com/reload: cloudserver-authdata
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: clouserver
          image: ghcr.io/scality/cloudserver
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config/config.json
              subPath: config.json
              readOnly: true
            - name: config
              mountPath: /config/locationConfig.json
              subPath: locationConfig.json
              readOnly: true
            - name: authdata
              mountPath: /config/authdata.json
              subPath: authdata.json
              readOnly: true
            - name: metadata
              mountPath: /meta
            - name: data
              mountPath: /data
      volumes:
        - name: config
          configMap:
            name: cloudserver-config
        - name: authdata
          secret:
            secretName: cloudserver-authdata
        - name: metadata
          persistentVolumeClaim:
            claimName: cloudserver-metadata
        - name: data
          persistentVolumeClaim:
            claimName: cloudserver-data
