k8s/services/cloudserver/app/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: cloudserver
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
