k8s/services/cloudserver/app/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cloudserver
spec:
  parentRefs:
    - name: eg-http-public
      namespace: core-eg
      sectionName: https
  hostnames:
    - s3.lama-corp.space
    - "*.s3.lama-corp.space"
  rules:
    - matches:
        - path:
            value: "/"
      backendRefs:
        - name: cloudserver
          port: 80
